[package]
name = "which-country-rs"
version = "1.0.0"
edition = "2024"

[features]
default = ["geoip"]
geoip = ["reqwest"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
